<resources>
    <string name="app_name">FPL Knowledge</string>
    <string name="title_activity_opening_page">OpeningPage</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Fantasy Premier League Info</string>
    <string name="nav_header_subtitle">Helping The Average User</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="menu_home">Home</string>
    <string name="menu_gallery">Team News</string>
    <string name="menu_slideshow">Input Team</string>
    <string name="menu_settings">Settings</string>
    <string name="title_activity_login2">LoginActivity2</string>
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_register_short">Register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="action_sign_out">Sign Out</string>
    <string name="welcome">"Welcome !"</string>
    <string name="invalid_username">Not a valid username</string>
    <string name="invalid_password">Password must be >5 characters</string>
    <string name="login_failed">"Login failed"</string>
    <string name="I_the_bank">Please enter how much you have in the bank currently:</string>

    <string-array name="teams">
        <item>Select Team</item>
        <item>Arsenal</item>
        <item>Aston Villa</item>
        <item>Brighton</item>
        <item>Burnley</item>
        <item>Chelsea</item>
        <item>Crystal Palace</item>
        <item>Everton</item>
        <item>Fulham</item>
        <item>Leicester</item>
        <item>Leeds</item>
        <item>Liverpool</item>
        <item>Manchester City</item>
        <item>Manchester United</item>
        <item>Newcastle</item>
        <item>Sheffield</item>
        <item>Southampton</item>
        <item>Tottenham</item>
        <item>West Brom</item>
        <item>West Ham</item>
        <item>Wolves</item>
    </string-array>


    <string name="title_activity_settings">SettingsActivity</string>

    <!-- Preference Titles -->
    <string name="messages_header">Messages</string>
    <string name="sync_header">Sync</string>

    <!-- Messages Preferences -->
    <string name="signature_title">Your signature</string>
    <string name="reply_title">Default reply action</string>

    <!-- Sync Preferences -->
    <string name="sync_title">Sync email periodically</string>
    <string name="attachment_title">Download incoming attachments</string>
    <string name="attachment_summary_on">Automatically download attachments for incoming emails
    </string>
    <string name="attachment_summary_off">Only download attachments when manually requested</string>
    <string name="title_activity_opening_input">Opening_input</string>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>

    <string name="hello_first_fragment">Hello first fragment</string>
    <string name="hello_second_fragment">Hello second fragment. Arg: %1$s</string>
    <string name="title_activity_defenders">Defenders</string>
    <string name="title_activity_goalkeeper">Goalkeeper</string>
    <string name="enter">Enter</string>
    <string name="title_activity_midfeilders">Midfeilders</string>
    <string name="title_activity_attackers">Attackers</string>
    <string name="title_activity_output">Output</string>
    <string name="tab_text_1">Tab 1</string>
    <string name="tab_text_2">Tab 2</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="attacker_recoomendation">Attacker Recoomendation:</string>
    <string name="midfeilder_recoomendation">Midfeilder Recoomendation:</string>
    <string name="defender_reccomendation">Defender Reccomendation:</string>
    <string name="welcome_to_the_team_input_page_here_you_will_need_your_team_ready_with_the_players_sell_now_price_the_screen_is_shown_below_as_an_example">Welcome to the team input page. Here you will need your team ready with the players sell now price. The screen is shown below as an example.</string>
    <string name="input_team">Input Team</string>
    <string name="fpl_transfers_page">FPL transfers page</string>
    <string name="title_activity_about_us">AboutUs</string>
</resources>